# ul-juce-scaffold

./: .cursorrules  .gitignore  CMakeLists.txt  README.md
sketches/001-source-deformation/: index.html
sketches/002-chewing-gum-break/: index.html
sketches/003-break-threshold-tuning/: index.html
sketches/004-resistance-formulations/: index.html
sketches/005-strain-threshold-tuning/: index.html
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
web/: graph.js  index.html  scribbler.js  shell.js  test.js
